# pycraft-training-credit-default-prediction

./: README.md  params.yaml  pyproject.toml  setup.cfg
credit_default_prediction/: data_preprocessing.py  dataset.py  evaluation.py  metrics.py  split.py  training.py  training_pipeline.py  validate.py
credit_default_prediction/tools/: params.py
src/credit_default_prediction/: dataset.py  evaluate.py  evaluation.py  feature_engineering.py  metrics.py  train.py  training.py  validate.py
src/credit_default_prediction/tools/: hyperparams_tuning.py  params.py
tests/: test_data_preprocessing.py  test_dataset.py  test_evaluate.py  test_evaluation.py  test_feature_engineering.py  test_params.py  test_preprocess_data.py  test_split.py  test_train.py
