[project]
name = "credit-default-prediction"
version = "0.1.0"
requires-python = ">=3.10,<4"
dependencies = [
    "scikit-learn~=1.5.1",
    "dvc~=3.54.1",
    "dvclive~=3.48.0",
    "xgboost~=2.1.1",
    "pandas~=2.2.3",
]

[tool.poetry]
packages = [{include="credit_default_prediction", from="src"}]

[tool.poetry.group.dev.dependencies]
pytest="^8.3.5"
pytest-mock="^3.14.0"
ruff = "^0.11.4"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
