[project]
name = "credit-default-prediction"
version = "0.1.0"
requires-python = ">=3.10,<4"
dependencies = ["scikit-learn~=1.5.1", "xgboost~=2.1.1", "pandas~=2.2.3", "click (>=8.3.0,<9.0.0)"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
black = "^25.9.0"
isort = "^6.0.1"
flake8 = "^7.3.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
